@@ -183,4 +183,19 @@ public BigDecimal myMethod(Object pObj)
 }
      ]]></code>
     </test-code>
+    <test-code>
+        <description><![CDATA[
+2645268, ClassCastException using Annotation on Local Field
+     ]]></description>
+        <expected-problems>1</expected-problems>
+        <code><![CDATA[
+public class Foo {
+ public void foo() {
+  @NotNull
+  BigDecimal bd = new BigDecimal(5);
+  bd.divideToIntegralValue(new BigDecimal(5));
+ }
+}
+     ]]></code>
+    </test-code>
 </test-data>
