@@ -3,6 +3,7 @@
 Fixed bug 2590258 - NPE with nicerhtml output
 Fixed bug 2317099 - False + in SimplifyCondition
 Fixed bug 2606609 - False "UnusedImports" positive in package-info.java
+Fixed bug 2645268 - ClassCastException in UselessOperationOnImmutable.getDeclaration
 
 New rule:
 	StrictExceptions : AvoidCatchingGenericException
